feat: bidCount 필드 제거 및 입찰 수 실시간 집계 기능 구현